--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,8 @@ description = "Jajoglowy personal website"
 keywords = "blog,developer,personal"
 info = ["Full Stack Developer"]
 avatarURL = "images/avatar.jpg"
-signatureURL = "images/signature/signature.png"
+# lightSignatureURL = "images/signature/signature.png"
+# darkSignatureURL = "images/signature/signature_light.png"
 #gravatar = "john.doe@example.com"
 dateFormat = "January 2, 2006"
 since = 2022
